# skillscan-benchmark

./: .dockerignore  .gitignore  ABOUT.md  CORPUS_FORMAT.md  METHODOLOGY.md  NOTICES.md  README.md  REPRODUCE.md  WILD_PROVENANCE.md  board_v1.json  board_v11_static.json  board_v1_frontier.json  board_v1_skillscan.json  frontier_baselines.json  pyproject.toml  skillgate_independent.json  skillinject_llm.json  skillinject_llm_claude-haiku.json  skillinject_llm_claude-opus.json  skillinject_llm_claude-sonnet.json  skillinject_llm_gpt-4o-mini.json
.github/workflows/: pages.yml
docs/: _headers  about.html  index.html  methodology.html  notices.html  reproduce.html  responses.html
docs/assets/: about.css  index.css  site.js  styles.css
example_corpus/: manifest.benign.jsonl  manifest.synthetic.jsonl
example_corpus/samples/benign/: api_config_helper.md  word_counter.md
example_corpus/samples/malicious/synthetic_novel/agent_hijacking/: doc_summarizer.md
llm/: modal_vllm.py  warm_endpoint.py
ops/: rerun_profile_a.sh
responses/: README.md  _TEMPLATE.md
responses/skill-inject/: 2026-07-01.md
scoreboard/: __init__.py  analyze.py  cache.py  dedup.py  manifest.py  model.py  run_board.py  stats.py
scoreboard/adapters/: __init__.py  base.py  cisco.py  llm_baseline.py  skillgate.py  skillscan.py  skillspector.py  snyk.py
scripts/: baseline_prompt_ablation.py  build_site.py  frontier_baselines.py  repro_diff.py  score_skillinject_llm.py
tests/: test_adapters.py  test_dedup.py  test_manifest.py  test_run_board.py  test_stats.py
(+2 files in other folders)
