[project]
name = "skillscan-benchmark"
version = "0.0.1"
description = "Independent FOSS benchmark grading skill-security scanners per attack class x difficulty tier."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
skillscan-benchmark = "scoreboard.run_board:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scoreboard"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
